# Project_UoL

./: README.md
src/ur5_softmat/: package.xml  setup.cfg  setup.py
src/ur5_softmat/handlers/: camera_handler.py
src/ur5_softmat/launch/: empty_world.launch.py  joint_state_pub.launch.py  rviz2.launch.py  spawn_ur5e.launch.py  ur5e_state_pub.launch.py  ur5e_world.launch.py
src/ur5_softmat/models/ur5e/: model.config  model.sdf
src/ur5_softmat/rviz/: ur5e_config.rviz
src/ur5_softmat/scripts/: classifier.py  coordinate_generator.py  img_process.py  sample.py  sls.py  ur5e.urdf.xacro
src/ur5_softmat/urdf/: ur5e.urdf
src/ur5_softmat/worlds/: ur5e_base.world  ur5e_lab.world
